refactor: extract batch of tools